<resources>
    <string name="app_name">ContactsIntent</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="btnInsert">Insert</string>
    <string name="btnViewAll">View</string>
    <string name="btnDelete">Delete</string>
    <string name="btnServiceTest">Service test</string>

    <string name="btnStartService">Start service</string>
    <string name="btnSQLLiteOpenHelper">SQLLite</string>

    <string name="btnSQLAdd">Add</string>
    <string name="btnSQLQuery">Query</string>
    <string name="btnSQLDelete">Delete</string>
    <string name="btnSQLShowAll">Show all</string>

    <string name="infoCommentsDeleted">All comments have been deleted!</string>
    <string name="infoCommentsAdded">The comment has been added!</string>
    <string name="infoNoCommentsToDispay">Thre are no comments to be displayed!</string>

    <string name="lblWifi">Wifi</string>
    <string name="btnEnableWifi">Enable wifi</string>
    <string name="btnStartScan">Start scan</string>
    <string name="btnStoptScan">Stop scan</string>

    <string name="queEnableWifi">Enable wifi?</string>
    <string name="tlWifiDisabled">Wifi disabled!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
