<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />


    <Button
        android:id="@+id/btnInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvText"
        android:text="@string/btnInsert" />

    <Button
        android:id="@+id/btnViewAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnInsert"
        android:text="@string/btnViewAll" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnViewAll"
        android:text="@string/btnDelete" />

    <Button
        android:id="@+id/btnServiceTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDelete"
        android:text="@string/btnServiceTest" />

    <Button
        android:id="@+id/btnSQLLite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnServiceTest"
        android:text="@string/btnSQLLiteOpenHelper" />

    <Button
        android:id="@+id/btnWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSQLLite"
        android:text="@string/lblWifi"
        />



    <!--
    <WebView
        android:id="@+id/wvView"
        android:layout_below="@id/btnServiceTest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></WebView>
-->
</RelativeLayout>
