<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSQLAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btnSQLAdd"/>

    <Button
        android:id="@+id/btnSQLDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btnSQLDelete"/>

    <Button
        android:id="@+id/btnSQLQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btnSQLQuery"/>

    <Button
        android:id="@+id/btnSQLShowAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btnSQLShowAll"/>

    <TextView
        android:id="@+id/tvView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />


</LinearLayout>